--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 make-runner:
   image: hamravesh.hamdocker.ir/public/darkube-cli:v1.1
   script:
+    - docker login -u $REGISTRY_USER -p $REGISTRY_PASSWORD $REGISTRY
     - docker build -f runner/Dockerfile --tag registry.hamdocker.ir/mlsd-indicatorss/stockprediction/runner:v1.0 .
     - docker push registry.hamdocker.ir/mlsd-indicatorss/stockprediction/runner:v1.0
 
