--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,26 +1,16 @@
-make-runner:
-  image: hamravesh.hamdocker.ir/public/darkube-cli:v1.1
+build:
+  image: registry.hamdocker.ir/mlsd-indicatorss/stockprediction/runner:v1.1
   only:
     refs:
     - master
   script:
-    - docker login -u $REGISTRY_USER -p $REGISTRY_PASSWORD $REGISTRY
-    - docker build -f runner/Dockerfile --tag registry.hamdocker.ir/mlsd-indicatorss/stockprediction/runner:v1.1 .
-    - docker push registry.hamdocker.ir/mlsd-indicatorss/stockprediction/runner:v1.1
+    - docker login -u $REGISTRY_USER -p $REGISTRY_PASSWORD $REGISTRY 
+    - make docker-build
+    - make docker-push
+  stage: build
 
-# darkube_build_test-app_mlsdandicator:
-#   image: registry.hamdocker.ir/mlsd-indicatorss/stockprediction/runner:v1.1
-#   only:
-#     refs:
-#     - master
-#   script:
-#     - docker login -u $REGISTRY_USER -p $REGISTRY_PASSWORD $REGISTRY 
-#     - make docker-build
-#     - make docker-push
-#   stage: build
-
-deploy-runner:
-  image: hamravesh.hamdocker.ir/public/darkube-cli:v1.1
+deploy:
+  image: registry.hamdocker.ir/mlsd-indicatorss/stockprediction/runner:v1.1
   only:
     refs:
     - master
