--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ darkube_build_test-app_mlsdandicator:
     refs:
     - master
   script:
-    - apk add make
+    - sudo apk add make
     - export IMAGE="registry.hamdocker.ir/hamravesh/build"
     - docker login -u $REGISTRY_USER -p $REGISTRY_PASSWORD $REGISTRY 
     - make docker-build docker-push
