--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,8 @@
 make-runner:
   image: hamravesh.hamdocker.ir/public/darkube-cli:v1.1
+  only:
+    refs:
+    - master
   script:
     - docker login -u $REGISTRY_USER -p $REGISTRY_PASSWORD $REGISTRY
     - docker build -f runner/Dockerfile --tag registry.hamdocker.ir/mlsd-indicatorss/stockprediction/runner:v1.1 .
@@ -15,13 +18,14 @@ make-runner:
 #     - make docker-build
 #     - make docker-push
 #   stage: build
-# darkube_deploy_test-app_asghar:
-#   image: hamravesh.hamdocker.ir/public/darkube-cli:v1.1
-#   only:
-#     refs:
-#     - master
-#   script:
-#     - 'darkube deploy --token ${DEPLOY_TOKEN}
-#       --app-id ${APP_ID}  --image-tag "${CI_COMMIT_SHORT_SHA}"
-#       --job-id "${CI_JOB_ID}"'
-#   stage: deploy
+
+darkube_deploy_test-app_asghar:
+  image: hamravesh.hamdocker.ir/public/darkube-cli:v1.1
+  only:
+    refs:
+    - master
+  script:
+    - 'darkube deploy --token ${DEPLOY_TOKEN}
+      --app-id ${APP_ID}  --image-tag "${CI_COMMIT_SHORT_SHA}"
+      --job-id "${CI_JOB_ID}"'
+  stage: deploy
