--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,9 +4,10 @@ build:
     refs:
     - master
   script:
-    - docker login -u $REGISTRY_USER -p $REGISTRY_PASSWORD $REGISTRY 
-    - make docker-build
-    - make docker-push
+    - ls
+    # - docker login -u $REGISTRY_USER -p $REGISTRY_PASSWORD $REGISTRY 
+    # - make docker-build
+    # - make docker-push
   stage: build
 
 deploy:
