--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,11 @@ build:
 
   stage: build
 
+test:
+  script:
+    - make test-app
+  stage: test
+
 deploy:
   image: registry.hamdocker.ir/mlsd-indicatorss/stockprediction/runner:v1.1
   only:
