--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,9 @@ uvicorn==0.22.0
 tensorboard==2.13.0
 python-multipart==0.0.6
 prometheus_client
+asyncio==3.4.3
+Pillow==9.4.0
+fastapi==0.96.0
+mlflow==2.4.1
+psutil==5.9.4
+Flask-Cors==4.0.0
